...
import androidx.compose.ui.platform.testTag
import com.tsdc.vinilos.data.model.Album

@Composable
fun AlbumDetailScreen(album: Album?) {
    Scaffold(
        modifier = Modifier.testTag("AlbumDetailScreen"),
        topBar = {
            AlbumDetailBar(
                album = album
            )
        }
    ) { paddingValues ->
...
