...
                                        localContext,
                                        Intent(localContext, AlbumListActivity::class.java),
                                        null
                                    )
                                }
                            ) {
                                Text(text = "Albumes", color = Color.White)
                            }
                        }
                        item {
                            Button(
                                modifier = Modifier
                                    .fillMaxWidth()
...
